# CryoCrane

./: .gitignore  CHANGELOG  CryoCrane.yml  CryoCrane2.py  CryoCrane_1.3.py  CryoCrane_beta_1.0.py  CryoCrane_beta_1.2.py  LICENSE  README.md  environment.yml  pyproject.toml  style_sheet.qss  utilities.py
atlas_weights/: CoordNet8_32_0.2_617.pth  CoordNet8_32_0.2_NcNR_C.pth  CoordNet8_32_0.2_check.pth  CoordNet8_32_0.2_default.pth  CoordNet8_32_0.2_get3.pth
nyquist_weights/: RCoordNet8_1024_0.2_full_fourier.pth
sessions/: 607-1.csv  617-2.csv  617-2_manipulated.csv  618-2.csv  alignment.csv  test.csv
src/: CryoCrane2.py  Training.py  utilities.py
weights/: ResNet8_256_0.2_full.pth
