[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryoCrane"
version = "0.1.0"
description = "Your project description here"
requires-python = ">=3.10,<3.11"

dependencies = [
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
    "mrcfile",
    "PyQt5",
    "pandas",
    "scikit-learn",
    "tifffile",
    "numpy<2"
]

[tool.setuptools.packages.find]
where = ["src"]